core-bundle/contao/themes/flexible/styles/components/row-wizard.pcss
.widget:has(.row_wizard) {
    margin-top: 13px;
    background: var(--form-bg-hover);
    border: 1px solid var(--border);
    border-radius: var(--border-radius);
    padding: 8px 10px;

    > h3 {
        padding-top: 0;
    }
}

.row_wizard {
    margin-top: 2px;
    width: unset;
    max-width: unset;

    .tl_select {
        min-width: 60px;
    }

    .tl_checkbox_single_container {
        margin: 0;
        white-space: nowrap;

        label {
            margin: 0;
            font-weight: 300;
        }
    }

    input.mw_enable {
        height: 16px;
        opacity: 0;
        position: absolute;
        width: 16px;
        pointer-events: none;

        + label {
            background: var(--icon-invisible) 0 0 no-repeat;
            display: inline-block;
            height: 16px;
            text-indent: -999em;
            width: 16px;
            cursor: pointer;
        }

        &:focus + label {
            outline: 5px auto -webkit-focus-ring-color;
        }

        &:checked + label {
            background-image: var(--icon-visible);
        }
    }

    th {
        font-size: 0.9em;
        font-weight: inherit;
    }

    td {
        padding: 2px 6px 2px 0;

        .tl_text,
        .tl_select {
            margin: 0;
        }

        .tl_text_field {
            display: flex;
        }

        &:first-child:has(>.drag-handle, .row-wizard-add),
        &:last-child {
            width: 1%;
            white-space: nowrap;
        }
    }

    tbody {
        tr:last-child {
            td {
                padding-bottom: 5px;
            }
        }
    }

    &[data-rows-count="0"] {
        &:not(:has(>thead)) {
            margin-top: 6px;
        }

        th {
            padding-bottom: 6px;
        }
    }

    + .tl_help {
        margin-top: 7px;
    }
}

.row-wizard-ghost {
    outline: 1px dashed var(--form-border);
    outline-offset: 2px;
    background-color: var(--table-even);
    border-radius: calc(var(--border-radius) - 4px);

    td {
        padding: 0 6px 0 0;
    }

    td:not(:has(>.row-wizard-add)),
    td > *:not(.row-wizard-add) {
        opacity: 0.5;
    }
}

[data-contao--row-wizard-target="copy"][disabled],
[data-contao--row-wizard-target="delete"][disabled] {
    cursor: not-allowed;
    filter: brightness(var(--disable-brightness, 0.2)) grayscale(1) opacity(0.3);
}

.row-wizard-drag-handle,
.row-wizard-add {
    background: none;
    border: 0;
    margin: 0;
    padding: 0;
    vertical-align: middle;
}

html[data-color-scheme="dark"] {
    --disable-brightness: 5;
}

